[package]
name = "unsafe_analysis"
version = "0.1.0"
authors = ["Ana Nora Evans <ananevans@gmail.com>"]

[lib]
name = "unsafe_analysis"
path = "src/lib.rs"
plugin = true

[dependencies]
chrono = "0.3"
cargo_metadata = "0.6.0"
cargo = "0.28.0"
fxhash = "0.2.1"


serde = "1.0.77"
serde_derive = "1.0.77"
serde_json = "1.0.27"

results = { path = "../results" }
